New entries should be added at the top

2005-03-09 cbook.py: only use enumerate() (the python version) if the builtin
	   version is not available.
           Add new function 'izip' which is set to itertools.izip if available
           and the python equivalent if not available. - SC

2005-03-07 backend_gdk.py: remove PIXELS_PER_INCH from points_to_pixels(), but
	   still use it to adjust font sizes. This allows the GTK version of
           line_styles.py to more closely match GTKAgg, previously the markers
           were being drawn too large. - SC

2005-03-01 Added Eric's contourf routines

2005-03-01 Added start of proper agg SWIG wrapper.  I would like to
           expose agg functionality directly a the user level and this
           module will serve that purpose eventually, and will
           hopefully take over most of the functionality of the
           current _image and _backend_agg modules.  - JDH

2005-02-28 Fixed polyfit / polyval to convert input args to float
           arrays - JDH


2005-02-25 Add experimental feature to backend_gtk.py to enable/disable
           double buffering (DBL_BUFFER=True/False) - SC

2005-02-24 colors.py change ColorConverter.to_rgb() so it always returns rgb 
           (and not rgba), allow cnames keys to be cached, change the exception
           raised from RuntimeError to ValueError (like hex2color())
	   hex2color() use a regular expression to check the color string is
           valid  - SC


2005-02-23 Added rc param ps.useafm so backend ps can use native afm
           fonts or truetype.  afme breaks mathtext but causes much
           smaller font sizes and may result in images that display
           better in some contexts (eg pdfs incorporated into latex
           docs viewed in acrobat reader).  I would like to extend
           this approach to allow the user to use truetype only for
           mathtext, which should be easy.

2005-02-23 Used sequence protocol rather than tuple in agg collection